ingress/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ijci.ij-build.dev"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
  labels:
    app: ingress
spec:
  tls:
    - hosts:
      - api.ij-build.dev
      - ijci.ij-build.dev
      secretName: letsencrypt
  rules:
    - host: api.ij-build.dev
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 5000
    - host: ijci.ij-build.dev
      http:
        paths:
          - backend:
              serviceName: ui
              servicePort: 80
